refactor: Renombrar campos de ID en modelos y controladores para consistencia