@@ -9,9 +9,11 @@ import org.springframework.hateoas.CollectionModel;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.List;
-
 import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.*;
+
+import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
 
 @RestController
 @RequestMapping("/api/v2/resenas")
@@ -28,16 +30,18 @@ public class ResenaControllerV2 {
     @Operation(summary = "Obtiene todas las reseñas")
     @GetMapping
     public ResponseEntity<CollectionModel<ResenaModel>> obtenerTodos() {
-        List<Resena> resenas = service.listarResenas();
-        List<ResenaModel> modelos = resenas.stream().map(assembler::toModel).toList();
+        Iterable<Resena> resenas = service.listarResenas();
+        List<ResenaModel> modelos = StreamSupport.stream(resenas.spliterator(), false)
+                                                 .map(assembler::toModel)
+                                                 .collect(Collectors.toList());
         return ResponseEntity.ok(CollectionModel.of(modelos,
                 linkTo(methodOn(ResenaControllerV2.class).obtenerTodos()).withSelfRel()));
     }
 
     @Operation(summary = "Obtiene una reseña por ID")
-    @GetMapping("/{idResena}")
-    public ResponseEntity<ResenaModel> obtenerPorId(@PathVariable int idResena) {
-        return service.obtenerResenaPorId(idResena)
+    @GetMapping("/{id_Resena}")
+    public ResponseEntity<ResenaModel> obtenerPorId(@PathVariable int id_Resena) {
+        return service.obtenerResenaPorId(id_Resena)
                 .map(resena -> ResponseEntity.ok(assembler.toModel(resena)))
                 .orElse(ResponseEntity.notFound().build());
     }
@@ -49,28 +53,32 @@ public class ResenaControllerV2 {
         return ResponseEntity.ok(assembler.toModel(nueva));
     }
 
-    @Operation(summary = "Actualiza una reseña existente")
-    @PutMapping("/{idResena}")
-    public ResponseEntity<ResenaModel> actualizarResena(@PathVariable int idResena, @RequestBody Resena resena) {
-        return service.obtenerResenaPorId(idResena)
-                .map(resenaExistente -> {
-                    resenaExistente.setComentario(resena.getComentario());
-                    resenaExistente.setCalificacion(resena.getCalificacion());
-                    resenaExistente.setFechaResena(resena.getFechaResena());
-                    Resena actualizado = service.guardResena(resenaExistente);
-                    return ResponseEntity.ok(assembler.toModel(actualizado));
-                })
-                .orElse(ResponseEntity.notFound().build());
+@PutMapping("/{id_Resena}")
+public ResponseEntity<Resena> actualizarResena(@PathVariable int id_Resena, @RequestBody Resena resena) {
+    try {
+        Resena updatedResena = service.actualizarResena(id_Resena, resena);
+        return ResponseEntity.ok(updatedResena); // Retorna el objeto actualizado
+    } catch (RuntimeException e) {
+        return ResponseEntity.notFound().build(); // Si la reseña no se encuentra
     }
+}
 
     @Operation(summary = "Elimina una reseña por ID")
-    @DeleteMapping("/{idResena}")
-    public ResponseEntity<Void> eliminarResena(@PathVariable int idResena) {
-        if (service.obtenerResenaPorId(idResena).isPresent()) {
-            service.eliminarResena(idResena);
+    @DeleteMapping("/{id_Resena}")
+    public ResponseEntity<Void> eliminarResena(@PathVariable int id_Resena) {
+        try {
+            service.eliminarResena(id_Resena);
             return ResponseEntity.noContent().build();
-        } else {
-            return ResponseEntity.notFound().build();
+        } catch (RuntimeException e) {
+            return ResponseEntity.notFound().build(); // Si la reseña no se encuentra
         }
     }
+@GetMapping("/producto/{id_Producto}")
+public ResponseEntity<List<Resena>> obtenerResenasPorProducto(@PathVariable int id_Producto) {
+    List<Resena> resenas = service.obtenerResenasPorProducto(id_Producto);
+    if (resenas.isEmpty()) {
+        return ResponseEntity.notFound().build(); // Si no se encuentran reseñas
+    }
+    return ResponseEntity.ok(resenas); // Retorna 200 OK si hay reseñas
+}
 }
